[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-eggs"
version = "0.0.1"
description = "Lovely Spam! Wonderful Spam!"
authors = [
  {name = "ME", email = "me@example.com"}
]
dependencies = [
    "pandas",
    "numpy"
]
requires-python = ">= 3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.rst"]
